--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </div>
     <footer></footer>
     <template id="List">
-        <section>
-            <h2></h2>
-            <ul></ul>
+        <section class="listSection">
+            <h2 class="listHeader"></h2>
+            <ul class="list"></ul>
         </section>
     </template>
     <template id="Item">
-        <li><a></a></li>
+        <li class="item"><a class="bookmark"></a></li>
     </template>
 </body>
 
