off white black

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <h1>
+            <a href="https://industrialnation.co.uk">industrialnation</a>
+        </h1>
+    </header>
     <div id="Main">
-        <h1>industrial nation</h1>
         <section id="Bookmarks"></section>
     </div>
     <footer></footer>
