--- a/bookmarks.html
+++ b/bookmarks.html
@@ -7,6 +7,12 @@ Do Not Edit! -->
 <H1>Bookmarks</H1>
 <DL><p>
 
+<DT><A HREF="https://bandcamp.com/" ADD_DATE="1764264665" PRIVATE="false" TAGS="music">bandcamp</A>
+<DD>
+
+<DT><A HREF="https://everynoise.com/" ADD_DATE="1764264638" PRIVATE="false" TAGS="music">Every Noise at Once </A>
+<DD>
+
 <DT><A HREF="https://lethain.com/" ADD_DATE="1763931859" PRIVATE="false" TAGS="blog,programming">Irrational Exuberance</A>
 <DD>
 
@@ -455,7 +461,7 @@ KT19 9XG Ewell Epsom
 <DT><A HREF="https://www.davemacleod.com/blog" ADD_DATE="1574287165" PRIVATE="false" TAGS="blog,outdoor">Dave MacLeod</A>
 <DD>
 
-<DT><A HREF="https://capitalistexploits.at/" ADD_DATE="1574286703" PRIVATE="false" TAGS="finance">Capitalist Exploits</A>
+<DT><A HREF="https://capitalistexploits.at/" ADD_DATE="1574286703" PRIVATE="false" TAGS="blog">Capitalist Exploits</A>
 <DD>
 
 <DT><A HREF="https://blog.codeminer42.com/how-to-organize-your-styles-with-itcss-3787cbc6dcbf" ADD_DATE="1563125835" PRIVATE="false" TAGS="programming,toread">How to Organize your Styles with ITCSS</A>
@@ -629,9 +635,6 @@ KT19 9XG Ewell Epsom
 <DT><A HREF="http://www.alanzucconi.com/" ADD_DATE="1562959393" PRIVATE="false" TAGS="programming,gaming">Alan Zucconi</A>
 <DD>
 
-<DT><A HREF="http://www.ampsoft.net/webdesign-l/WindowsMacFonts.html" ADD_DATE="1562959393" PRIVATE="false" TAGS="design,fonts">Browser Safe Fonts</A>
-<DD>
-
 <DT><A HREF="http://www.animatedknots.com/" ADD_DATE="1562959393" PRIVATE="false" TAGS="outdoor">Animated Knots</A>
 <DD>
 
@@ -663,9 +666,6 @@ KT19 9XG Ewell Epsom
 <DD>
 
 <DT><A HREF="http://www.explosm.net/comics/new/" ADD_DATE="1562959393" PRIVATE="false" TAGS="webcomic">Cyanide and Happiness</A>
-<DD>
-
-<DT><A HREF="http://www.fontsquirrel.com/" ADD_DATE="1562959393" PRIVATE="false" TAGS="design,fonts">Font Squirrel</A>
 <DD>
 
 <DT><A HREF="http://www.foxtrot.com/" ADD_DATE="1562959393" PRIVATE="false" TAGS="webcomic">FoxTrot</A>
